--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="col-md-12 text-center st-header-content">
 					<div class="logo"><a href=""><img src="images/logo.png" alt=""></a></div>
 					<div class="st-header-title">
-						<h2>Welcome <span>The Cloud World</span></h2>
+						<h2>Welcome <span>The Cloud World Version 2.0</span></h2>
 						<p>Welcome to The Cloud World Version 2.0<br /> - By Abhimanyu </p>
 					</div>
 				</div>
